# ArataMQ

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
cmake/: gtest.cmake  vcpkg.cmake
processes/: consumer_process.cpp  producer_process.cpp
scripts/: build.sh  run_tests.sh
src/config/: aratamqconfig.cpp  aratamqconfig.h
src/core/broker/: broker.cpp  broker.h
src/core/consumer/: iconsumer.h
src/core/exchange/: direct_exchange.cpp  direct_exchange.h  fanout_exchange.cpp  fanout_exchange.h  iexchange.h  topic_exchange.cpp  topic_exchange.h
src/core/message/: message.cpp  message.h
src/core/queue/: queue.cpp  queue.h
src/utils/: logger.cpp  logger.h  utils.cpp  utils.h
tests/unit/core/broker/: broker_test.cpp
tests/unit/core/exchange/: direct_exchange_test.cpp  fanout_exchange_test.cpp  topic_exchange_test.cpp
tests/unit/core/queue/: queue_test.cpp
tests/unit/exchange/: direct_exchange_test.cpp  fanout_exchange_test.cpp  topic_exchange_test.cpp
